--- a/contract/package.json
+++ b/contract/package.json
@@ -1,14 +1,28 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.22.1"
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@types/chai": "^4.3.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "chai": "^4.4.1",
+    "ethers": "^6.0.0",
+    "hardhat": "^2.22.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "@typechain/hardhat": "^2.3.0",
+    "@typechain/ethers-v5": "^7.0.1",
+    "typechain": "^5.1.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "hardhat-deploy": "^0.11.10"
   },
   "scripts": {
-    "test": "echo 'Hello, world!'"
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "yarn hardhat deploy"
   }
 }
