--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -18,7 +18,7 @@ coverage
 /cypress/screenshots/
 
 # Editor directories and files
-.vscode/*
+.vscode
 !.vscode/extensions.json
 .idea
 *.suo
@@ -26,6 +26,7 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+.secrets
 
 *.tsbuildinfo
 
