--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
+    "@vue/composition-api": "^1.5.0",
+    "ethers": "^5.6.4",
+    "pinia": "^2.0.13",
     "clipboard": "^2.0.11",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
@@ -18,6 +22,6 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.10"
+    "vite": "^5.2.7"
   }
 }
